# git-comma

./: .gitignore  .licenseguardrc  CLAUDE.md  Cargo.toml  LICENSE  README.md
docs/pocket/plans/2026-05-13-configurable-max-chars/: execution-plan.md  log.json
docs/pocket/plans/2026-05-13-configurable-max-chars/reviews/: T1-cycle-1.json  T2-cycle-1.json  T3-cycle-1.json
docs/pocket/spec/2026-05-13-configurable-max-chars/: max-chars.md
docs/superpowers/plans/: 2026-04-18-comma-first-startup.md
docs/superpowers/specs/: 2026-04-18-comma-first-startup-design.md
src/: ai.rs  config.rs  error.rs  filter.rs  lib.rs  main.rs  openrouter.rs  preflight.rs  prompt.rs  sanitization.rs  setup.rs  tui.rs  ui.rs
tests/: config_tests.rs  integration_tests.rs
