[package]
name = "git-comma"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "comma"
path = "src/main.rs"

[dependencies]
inquire = { version = "0.5", features = ["editor"] }
thiserror = "2"
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
home = "0.4"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
